apps/base/media-control/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bazarr
  name: bazarr-prod-media-deployment
  namespace: media-control
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
      - image: lscr.io/linuxserver/bazarr:latest
        name: bazarr
        ports:
          - containerPort: 6767
            name: http
            protocol: TCP
        resources:
        volumeMounts:
        - name: app-data
          mountPath: /config
        - name: tv-data
          mountPath: /tv
        - name: movies-data
          mountPath: /movies
      volumes:
      - name: app-data
        persistentVolumeClaim:
          claimName: bazarr-prod-media-pvc
      - name: tv-data
        nfs:
          server: 192.168.10.197
          path: /srv/nfs/tv
      - name: movies-data
        nfs:
          server: 192.168.10.197
          path: /srv/nfs/movies
